# rusty-slm

./: .envrc  .gitignore  CITATION.cff  Cargo.toml  README.md  build.rs  flake.nix  generate_protos.sh  pyproject.toml  setup.py  shell.nix
protos/rusty_slm/: slm.proto
rusty-slm/: __init__.py
rusty_slm/: __init__.py  client.py  slm_pb2.py  slm_pb2.pyi  slm_pb2_grpc.py
src/: client.rs  image.rs  main.rs  render_state.rs  server.rs  shader.vert  shader.wgsl  state.rs  texture.rs  vertex.rs
src/data/: icon
