[package]
name = "rusty-slm"
version = "0.1.0"
authors = ["Max Tyler <maxastyler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.24.0"
winit_input_helper = "0.9"
log = "0.4"
env_logger = "0.7"
anyhow = "1.0"
wgpu = "0.7"
image = "0.23"
futures = "0.3"
bytemuck = {version = "1.5", features = [ "derive" ]}

[build-dependencies]
shaderc = "0.7"
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"