[package]
name = "rusty-slm"
version = "0.1.0"
authors = ["Max Tyler <maxastyler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.24.0"
winit_input_helper = "0.9"
log = "0.4"
env_logger = "0.7"
anyhow = "1.0"
wgpu = "0.7"
image = "0.23"
# futures = "0.3"
tonic = "0.4"
prost = "0.7"
futures-core = "0.3"
futures-util = "0.3"
futures = "0.3"
async-stream = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
tokio = { version = "1.2", features = ["rt-multi-thread", "macros", "sync", "time"] }
bytemuck = {version = "1.5", features = [ "derive" ]}
clap = "2.33"

[build-dependencies]
shaderc = "0.7"
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
tonic-build = "0.4"

[[bin]]
name = "rusty-slm-client"
path = "src/client.rs"

[[bin]]
name = "rusty-slm-server"
path = "src/main.rs"