[package]
name = "rusty-slm"
version = "0.2.0"
authors = ["Max Tyler <maxastyler@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
wgpu = "0.17"
image = "0.24"
tonic = "0.9"
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
bytemuck = { version = "1.5", features = ["derive"] }
clap = "2.33"
futures = "0.3"
futures-util = "0.3"

[build-dependencies]
anyhow = "1.0"
tonic-build = "0.9"

[[bin]]
name = "rusty-slm-client"
path = "src/client.rs"

[[bin]]
name = "rusty-slm-server"
path = "src/main.rs"